--- a/register.html
+++ b/register.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title>Styles Conference</title>
 </head>
 
 <body>
-    <header>
-        <h1><a href="index.html">Styles Conference</a></h1>
-        <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-        <nav>
+    <header class="primary-header container group">
+        <h1 class="logo">
+            <a href="index.html">Styles <br> Conference</a>
+        </h1>
+
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+        <nav class="nav primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
@@ -19,24 +23,19 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <section>
-        <h2>Dedicated to the Craft of Building Websites</h2>
-        <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
-            technologies. Join us this August!</p>
-        <a href="register.html">Register Now</a>
-    </section>
-    <section>
-        
-        <section>
-                <h5>Register NOW</h5>
+   
+    <section class="row-alt">
+        <div class="lead container">
+            
+            <h1>Register</h1>
 
-            <p>Register to the event</p>
-        </section>
+            <p>Every year we aim to have an unbelievable time, and this year we&#8217;d love it for you to join us. Conference passes only cost $99, one of the best values you&#8217;ll find.</p>
 
+        </div>
     </section>
-    <footer>
+    <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
-        <nav>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
