--- a/venue.html
+++ b/venue.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title>Styles Conference</title>
 </head>
 
 <body>
-    <header>
-        <h1><a href="index.html">Styles Conference</a></h1>
-        <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-        <nav>
+    <header class="primary-header container group">
+        <h1 class="logo">
+            <a href="index.html">Styles <br> Conference</a>
+        </h1>
+
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+        <nav class="nav primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
@@ -19,27 +23,20 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <section>
-        <h2>Dedicated to the Craft of Building Websites</h2>
-        <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
-            technologies. Join us this August!</p>
-        <a href="register.html">Register Now</a>
-    </section>
-    <section>
 
-        <section>
-            <a href="venue.html">
-                <h5>Venue</h5>
-                <h3>The Chicago Theatre</h3>
-            </a>
-            <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.
-                © Styles Conference</p>
-        </section>
-        
+    <section class="row-alt">
+        <div class="lead container">
+
+            <h1>Venue</h1>
+
+            <p>The conference is held at The Chicago Theatre, a beautiful historical landmark. The conference hotel, Hotel Chicago, is a short walk away down State Street.</p>
+
+
+        </div>
     </section>
-    <footer>
+    <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
-        <nav>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
