--- a/speakers.html
+++ b/speakers.html
@@ -56,6 +56,8 @@
                  --><aside class="col-1-3">
                     <div class="speaker-info">
 
+                        <img src="assets/images/speakers/chris-mills.jpg" alt="Chris Mills">
+
                         <ul>
                             <li><a href="https://twitter.com/aaroni">@aaroni</a></li>
                             <li><a href="http://www.thisisaaronslife.com/">thisisaaronslife.com</a></li>
@@ -80,6 +82,8 @@
                     --><aside class="col-1-3">
                         <div class="speaker-info">
                         
+                            <img src="assets/images/speakers/shay-howe.jpg" alt="">
+
                             <ul>
                                 <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
                                 <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
